--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,7 @@
 Changelog
 =========
 
-1.0-dev (unreleased)
+1.3
 --------------------
 
-- Package created using templer
-  []
+- First "stable" release
