--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,13 @@
+1.7.0.4
+=======
+
+Also support linux3
+
+1.7.0.3
+=======
+
+Use correct arch (x86_64/i686) for linux systems
+
 1.7.0.2
 =======
 
