--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,13 +1,7 @@
 1.9.7.2 (unreleased)
 ====================
 
-- Nothing changed yet.
-
-
-1.9.7.1 (2014-05-08)
-====================
-
-- Nothing changed yet.
+Improve url generation
 
 
 1.9.7.0 (2014-02-19)
